<resources>
    <string name="app_name">PokeApp</string>
    <string name="entrenador">Entrenador</string>
    <string name="rb_femenino">Femenino</string>
    <string name="rb_masculino">Masculino</string>
    <string name="entrar">Entrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text">Ha ocurrido un error</string>
    <string name="inserta">Se ha insertado correctamente</string>
    <string name="lista_menu_text">Detalle</string>
    <string name="favorito_menu_text">Favorito</string>
    <string name="weightPoke">Peso:</string>
    <string name="heightPoke">Altura:</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="weight">weight</string>
    <string name="height">Height</string>
    <string name="base">Experiencia base: </string>
    <string name="bases">base</string>
    <string name="order">Orden: </string>
    <string name="orden">orden</string>
</resources>
